--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -1,3 +1,46 @@
 .main {
     margin-top: 10px;
 }
+
+.iframe-container {
+    overflow: hidden;
+    padding-top: 56.25%;
+    position: relative;
+    width: 60%;
+    float: left;
+  }
+
+.iframe-container iframe {
+    border: 0;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 60%;
+}
+
+.video-list {
+    float: right;
+    width: 40% !important;
+    padding-left: 20px !important;
+    margin-top: 0px !important;
+}
+
+.error {
+    color: red
+}
+
+@media only screen and (max-width: 991px) {
+    .iframe-container {
+        width: 100%;
+    }
+
+    .iframe-container iframe {
+        height: 100%;
+    }
+
+    .video-list {
+        width: auto !important;
+        margin-top: 20px !important;
+    }
+}
