--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -26,6 +26,21 @@
     margin-top: 0px !important;
 }
 
+.video-image {
+    position: relative;
+    height: 100%;
+}
+
+.video-length {
+    width: auto;
+    background-color: black;
+    color: white;
+    position: absolute;
+    padding-left: 4px;
+    padding-right: 4px;
+    bottom: 0;
+}
+
 .error {
     color: red
 }
@@ -42,5 +57,6 @@
     .video-list {
         width: auto !important;
         margin-top: 20px !important;
+        padding-left: 0px !important;
     }
 }
