--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -2,12 +2,24 @@
     margin-top: 10px;
 }
 
+.video-container {
+    width: 60% !important;
+    float: left;
+    margin: 0 !important;
+    border-radius: 0 !important;
+}
+
+.ui.card > :first-child {
+    border-radius: 0 !important;
+}
+
 .iframe-container {
     overflow: hidden;
     padding-top: 56.25%;
     position: relative;
-    width: 60%;
+    width: 100%;
     float: left;
+    border-radius: 0px !important;
   }
 
 .iframe-container iframe {
@@ -16,7 +28,7 @@
     position: absolute;
     top: 0;
     width: 100%;
-    height: 60%;
+    height: 100%;
 }
 
 .video-list {
@@ -46,6 +58,11 @@
 }
 
 @media only screen and (max-width: 991px) {
+
+    .video-container {
+        width: 100% !important;
+    }
+
     .iframe-container {
         width: 100%;
     }
